# text-vectorization-classification

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: dataset_config.ini  preprocess_config.ini  vectorizers_config.ini
src/: __init__.py
src/config/: __init__.py  config_reader.py
src/data/: __init__.py  dataset_loader.py
src/models/: __init__.py  _ml_model.py  base_strategy.py  linear_svc.py  logistic_regression.py  models.py  random_forest.py
src/preprocessing/: __init__.py  preprocess.py
src/utils/: __init__.py  logger.py  results.py
src/vectorizers/: __init__.py  albert.py  base_strategy.py  bert.py  bow.py  doc2vec.py  e5.py  glove.py  gpt2.py  instructor.py  roberta.py  tfidf.py  vectorizer.py  word2vec.py
